<resources>
    <string name="app_name">examen</string>
    <string name="hint_nombre_pro">N. Provedor:</string>
    <string name="hint_representate_prov">R. Provedor:</string>
    <string name="hint_direccion">Direccion:</string>
    <string name="hint_telefono">Telefono:</string>
    <string name="hint_productos">Productos:</string>
    <string name="hint_credito">Credito:</string>
    <string name="btn_guarda">GUARDAR</string>
    <string name="menu_nuevo">Guardar Datos</string>
</resources>