<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre_pro" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewNombre"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewRepresentante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_representate_prov" />

    <EditText
        android:id="@+id/txtRepresentate_Pr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewRepresentante"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_direccion" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewDireccion"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_telefono" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewTelefono"
        android:inputType="phone"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_productos" />

    <EditText
        android:id="@+id/txtProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewProductos"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_credito" />

    <EditText
        android:id="@+id/txtCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewCredito"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guarda"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_edit_24"
         />

</LinearLayout>